bonus/confs/gitlab/03-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:latest
          ports:
            - containerPort: 80
            - containerPort: 22
          volumeMounts:
            - name: config
              mountPath: /etc/gitlab
            - name: data
              mountPath: /var/opt/gitlab
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: gitlab-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: gitlab-data-pvc
