bonus/confs/gitlab/02-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-web
  namespace: gitlab
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
    - port: 80
      targetPort: 80
