bonus/confs/gitlab/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
spec:
  rules:
    - host: gitlab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-web
                port:
                  number: 80
